activating all docsets

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -78,7 +78,7 @@ scraper_name: chef
 zip_url:  
 sort: 80
 additional: false
-active: false
+active: true
 [clojure]
 name: Clojure
 parsed_name: clojure
@@ -96,7 +96,7 @@ scraper_name: coffeescript
 zip_url:  
 sort: 9
 additional: false
-active: false
+active: true
 [cordova]
 name: Apache Cordova
 parsed_name: apache_cordova
@@ -105,7 +105,7 @@ scraper_name: cordova
 zip_url:  
 sort: 11
 additional: false
-active: false
+active: true
 [cpp]
 name: Cpp
 parsed_name: cpp
@@ -114,7 +114,7 @@ scraper_name: cpp
 zip_url:  
 sort: 12
 additional: false
-active: false
+active: true
 [css]
 name: CSS
 parsed_name: css
@@ -123,7 +123,7 @@ scraper_name: css
 zip_url:  
 sort: 40
 additional: false
-active: false
+active: true
 [d3]
 name: D3
 parsed_name: d3
@@ -132,7 +132,7 @@ scraper_name: d3
 zip_url:  
 sort: 13
 additional: false
-active: false
+active: true
 [django]
 name: Django
 parsed_name: django
@@ -141,7 +141,7 @@ scraper_name: django
 zip_url: https://docs.djangoproject.com/m/docs/django-docs-1.8-en.zip 
 sort: 14
 additional: false
-active: false
+active: true
 [dom]
 name: DOM
 parsed_name: dom
@@ -177,7 +177,7 @@ scraper_name: ember
 zip_url:  
 sort: 16
 additional: false
-active: false
+active: true
 [express]
 name: Express
 parsed_name: express
@@ -186,7 +186,7 @@ scraper_name: express
 zip_url:  
 sort: 17
 additional: false
-active: false
+active: true
 [git]
 name: Git
 parsed_name: git
@@ -195,7 +195,7 @@ scraper_name: git
 zip_url:  
 sort: 18
 additional: false
-active: false
+active: true
 [go]
 name: Go
 parsed_name: go
@@ -204,7 +204,7 @@ scraper_name: go
 zip_url:  
 sort: 19
 additional: false
-active: false
+active: true
 [grunt]
 name: Grunt
 parsed_name: grunt
@@ -213,7 +213,7 @@ scraper_name: grunt
 zip_url:  
 sort: 21
 additional: false
-active: false
+active: true
 [html]
 name: HTML
 parsed_name: html
@@ -222,7 +222,7 @@ scraper_name: html
 zip_url:  
 sort: 30
 additional: false
-active: false
+active: true
 [http]
 name: Http
 parsed_name: http
@@ -231,7 +231,7 @@ scraper_name: http
 zip_url:  
 sort: 22
 additional: false
-active: false
+active: true
 [haskell]
 name: Haskell
 parsed_name: haskell
@@ -240,7 +240,7 @@ scraper_name: haskell
 zip_url:  
 sort: 23
 additional: false
-active: false
+active: true
 [iojs]
 name: ioJS
 parsed_name: iojs
@@ -249,7 +249,7 @@ scraper_name: iojs
 zip_url:  
 sort: 24
 additional: false
-active: false
+active: true
 [jasmine]
 name: Jasmine
 parsed_name: jasmine
@@ -258,7 +258,7 @@ scraper_name: jasmine
 zip_url:  
 sort: 25
 additional: false
-active: false
+active: true
 [javascript]
 name: JavaScript
 parsed_name: javascript
@@ -267,7 +267,7 @@ scraper_name: javascript
 zip_url:  
 sort: 20
 additional: false
-active: false
+active: true
 [java7se]
 name: Java 7 SE
 parsed_name: java7se
@@ -276,7 +276,7 @@ scraper_name: java7se
 zip_url:  
 sort: 26
 additional: false
-active: false
+active: true
 [jest]
 name: Jest
 parsed_name: jest
@@ -285,7 +285,7 @@ scraper_name: jest
 zip_url:  
 sort: 27
 additional: false
-active: false
+active: true
 [jquery]
 name: JQuery
 parsed_name: jquery
@@ -294,7 +294,7 @@ scraper_name: jquery_core
 zip_url:  
 sort: 28
 additional: false
-active: false
+active: true
 [jqueryui]
 name: JQuery UI
 parsed_name: jquery_ui
@@ -303,7 +303,7 @@ scraper_name: jquery_ui
 zip_url:  
 sort: 29
 additional: false
-active: false
+active: true
 [jquerymobile]
 name: JQuery Mobile
 parsed_name: jquery_mobile
@@ -312,7 +312,7 @@ scraper_name: jquery_mobile
 zip_url:  
 sort: 31
 additional: false
-active: false
+active: true
 [knockout]
 name: KnockOut
 parsed_name: knockout
@@ -321,7 +321,7 @@ scraper_name: knockout
 zip_url:  
 sort: 32
 additional: false
-active: false
+active: true
 [less]
 name: Less
 parsed_name: less
@@ -330,7 +330,7 @@ scraper_name: less
 zip_url:  
 sort: 33
 additional: false
-active: false
+active: true
 [laravel]
 name: Laravel
 parsed_name: laravel
@@ -339,7 +339,7 @@ scraper_name: laravel
 zip_url:  
 sort: 34
 additional: false
-active: false
+active: true
 [lodash]
 name: Lo-Dash
 parsed_name: lodash
@@ -348,7 +348,7 @@ scraper_name: lodash
 zip_url:  
 sort: 35
 additional: false
-active: false
+active: true
 [lua]
 name: Lua
 parsed_name: lua
@@ -357,7 +357,7 @@ scraper_name: lua
 zip_url:  
 sort: 36
 additional: false
-active: false
+active: true
 [marionette]
 name: Marionette
 parsed_name: marionette
@@ -366,7 +366,7 @@ scraper_name: marionette
 zip_url:  
 sort: 37
 additional: false
-active: false
+active: true
 [markdown]
 name: MarkDown
 parsed_name: markdown
@@ -375,7 +375,7 @@ scraper_name: markdown
 zip_url:  
 sort: 38
 additional: false
-active: false
+active: true
 [mocha]
 name: Mocha
 parsed_name: mocha
@@ -384,7 +384,7 @@ scraper_name: mocha
 zip_url:  
 sort: 39
 additional: false
-active: false
+active: true
 [modernizr]
 name: Modernizr
 parsed_name: modernizr
@@ -393,7 +393,7 @@ scraper_name: modernizr
 zip_url:  
 sort: 41
 additional: false
-active: false
+active: true
 [moment]
 name: Moment
 parsed_name: moment
@@ -402,7 +402,7 @@ scraper_name: moment
 zip_url:  
 sort: 42
 additional: false
-active: false
+active: true
 [mysql]
 name: Mysql
 parsed_name: mysql
@@ -411,7 +411,7 @@ scraper_name: mysql
 zip_url:  
 sort: 43
 additional: false
-active: false
+active: true
 [mongoosejs]
 name: MongooseJS
 parsed_name: mongoosejs
@@ -420,7 +420,7 @@ scraper_name: mongoose
 zip_url:  
 sort: 44
 additional: false
-active: false
+active: true
 [nginx]
 name: Nginx
 parsed_name: nginx
@@ -429,7 +429,7 @@ scraper_name: nginx
 zip_url:  
 sort: 45
 additional: false
-active: false
+active: true
 [node]
 name: NodeJS
 parsed_name: node
@@ -438,7 +438,7 @@ scraper_name: node
 zip_url:  
 sort: 46
 additional: false
-active: false
+active: true
 [nokogiri]
 parsed_name: nokogiri
 name: Nokogiri
@@ -447,7 +447,7 @@ scraper_name: nokogiri2
 zip_url:  
 sort: 47
 additional: false
-active: false
+active: true
 [npm]
 name: npm
 parsed_name: npm
@@ -456,7 +456,7 @@ scraper_name: npm
 zip_url:  
 sort: 48
 additional: false
-active: false
+active: true
 [opentsdb]
 name: OpenTSDB
 parsed_name: opentsdb
@@ -465,7 +465,7 @@ scraper_name: opentsdb
 zip_url:  
 sort: 49
 additional: false
-active: false
+active: true
 [php]
 name: PHP
 parsed_name: php
@@ -474,7 +474,7 @@ scraper_name: php2
 zip_url:  
 sort: 51
 additional: false
-active: false
+active: true
 [phpunit]
 name: PHPUnit
 parsed_name: phpunit
@@ -483,7 +483,7 @@ scraper_name: phpunit
 zip_url:  
 sort: 52
 additional: false
-active: false
+active: true
 [phalcon]
 name: Phalcon
 parsed_name: phalcon
@@ -492,7 +492,7 @@ scraper_name: phalcon
 zip_url:  
 sort: 53
 additional: false
-active: false
+active: true
 [phaser]
 name: Phaser
 parsed_name: phaser
@@ -501,7 +501,7 @@ scraper_name: phaser
 zip_url:  
 sort: 54
 additional: false
-active: false
+active: true
 [postgresql]
 name: PostgreSQL
 parsed_name: postgresql
@@ -510,7 +510,7 @@ scraper_name: postgresql
 zip_url:  
 sort: 55
 additional: false
-active: false
+active: true
 [python2]
 name: Python2
 parsed_name: python2
@@ -519,7 +519,7 @@ scraper_name: python2
 zip_url: https://docs.python.org/2.7/archives/python-2.7.8-docs-html.zip
 sort: 56
 additional: false
-active: false
+active: true
 [python]
 name: Python3
 parsed_name: python3
@@ -528,7 +528,7 @@ scraper_name: python
 zip_url: https://docs.python.org/3/archives/python-3.5.0-docs-html.zip
 sort: 57
 additional: false
-active: false
+active: true
 [q]
 name: q
 parsed_name: q
@@ -537,7 +537,7 @@ scraper_name: q
 zip_url:  
 sort: 58
 additional: false
-active: false
+active: true
 [rails]
 name: Rails
 parsed_name: rails
@@ -546,7 +546,7 @@ scraper_name: rails
 zip_url:  
 sort: 59
 additional: false
-active: false
+active: true
 [react]
 name: React
 parsed_name: react
@@ -555,7 +555,7 @@ scraper_name: react
 zip_url:  
 sort: 61
 additional: false
-active: false
+active: true
 [react_native]
 name: React native
 parsed_name: react_native
@@ -564,7 +564,7 @@ scraper_name: react_native
 zip_url:  
 sort: 62
 additional: false
-active: false
+active: true
 [react_router]
 name: React Router
 parsed_name: react_router
@@ -573,7 +573,7 @@ scraper_name: react_router
 zip_url:  
 sort: 63
 additional: false
-active: false
+active: true
 [redis]
 name: Redis
 parsed_name: redis
@@ -582,7 +582,7 @@ scraper_name: redis
 zip_url:  
 sort: 64
 additional: false
-active: false
+active: true
 [reflux]
 name: Reflux
 parsed_name: reflux
@@ -591,7 +591,7 @@ scraper_name: reflux
 zip_url:  
 sort: 65
 additional: false
-active: false
+active: true
 [requirejs]
 name: RequireJS
 parsed_name: requirejs
@@ -600,7 +600,7 @@ scraper_name: requirejs
 zip_url:  
 sort: 66
 additional: false
-active: false
+active: true
 [rethinkdb]
 name: RethinkDB
 parsed_name: rethinkdb
@@ -609,7 +609,7 @@ scraper_name: rethinkdb
 zip_url:  
 sort: 67
 additional: false
-active: false
+active: true
 [ruby]
 name: Ruby
 parsed_name: ruby
@@ -618,7 +618,7 @@ scraper_name: ruby
 zip_url:  
 sort: 68
 additional: false
-active: false
+active: true
 [rust]
 name: Rust
 parsed_name: rust
@@ -627,7 +627,7 @@ scraper_name: rust
 zip_url:  
 sort: 69
 additional: false
-active: false
+active: true
 [sass]
 name: Sass
 parsed_name: sass
@@ -636,7 +636,7 @@ scraper_name: sass
 zip_url:  
 sort: 70
 additional: false
-active: false
+active: true
 [sinon]
 name: SinonJS
 parsed_name: sinonjs
@@ -645,7 +645,7 @@ scraper_name: sinon
 zip_url:  
 sort: 71
 additional: false
-active: false
+active: true
 [socketio]
 name: SocketIO
 parsed_name: socketio
@@ -654,7 +654,7 @@ scraper_name: socketio
 zip_url:  
 sort: 72
 additional: false
-active: false
+active: true
 [svg]
 name: SVG
 parsed_name: svg
@@ -663,7 +663,7 @@ scraper_name: svg
 zip_url:  
 sort: 50
 additional: false
-active: false
+active: true
 [swift]
 name: Swift
 parsed_name: swift
@@ -672,7 +672,7 @@ scraper_name: swift
 zip_url:  
 sort: 81
 additional: false
-active: false
+active: true
 [swiftreference]
 name: Swift
 parsed_name: swift
@@ -681,7 +681,7 @@ scraper_name: swiftreference
 zip_url:  
 sort: 82
 additional: true
-active: false
+active: true
 [symfony]
 name: Symfony
 parsed_name: symfony
@@ -690,7 +690,7 @@ scraper_name: symfony
 zip_url:  
 sort: 73
 additional: false
-active: false
+active: true
 [twig]
 name: Twig
 parsed_name: twig
@@ -699,7 +699,7 @@ scraper_name: twig
 zip_url:  
 sort: 74
 additional: false
-active: false
+active: true
 [underscore]
 name: UnderscoreJS
 parsed_name: underscorejs
@@ -708,7 +708,7 @@ scraper_name: underscore
 zip_url:  
 sort: 75
 additional: false
-active: false
+active: true
 [vue]
 name: Vue
 parsed_name: vue
@@ -717,7 +717,7 @@ scraper_name: vue
 zip_url:  
 sort: 76
 additional: false
-active: false
+active: true
 [webpack]
 name: Webpack
 parsed_name: webpack
@@ -726,7 +726,7 @@ scraper_name: webpack
 zip_url:  
 sort: 77
 additional: false
-active: false
+active: true
 [xpath]
 name: XPath
 parsed_name: xpath
@@ -735,7 +735,7 @@ scraper_name: xpath
 zip_url:  
 sort: 60
 additional: false
-active: false
+active: true
 [yii]
 name: Yii
 parsed_name: yii
@@ -744,7 +744,7 @@ scraper_name: yii
 zip_url:  
 sort: 78
 additional: false
-active: false
+active: true
 [yii1]
 name: Yii1
 parsed_name: Yii1
@@ -753,4 +753,4 @@ scraper_name: yii1
 zip_url:  
 sort: 79
 additional: false
-active: false
+active: true
