--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -276,7 +276,7 @@ scraper_name: java7se
 zip_url:  
 sort: 26
 additional: false
-active: true
+active: false
 [jest]
 name: Jest
 parsed_name: jest
