added scala docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -146,7 +146,7 @@ active: true
 name: DOM
 parsed_name: dom
 default_uri: /dom/document
-scraper_name: true
+scraper_name: dom
 zip_url:  
 sort: 10
 additional: false
@@ -635,6 +635,15 @@ default_uri: /sass/list_functions
 scraper_name: sass
 zip_url:  
 sort: 70
+additional: false
+active: true
+[scala]
+name: Scala
+parsed_name: scala
+default_uri: /scala/index
+scraper_name: scala
+zip_url: 
+sort: 83
 additional: false
 active: true
 [sinon]
