added bootstrap docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -43,6 +43,15 @@ zip_url:
 sort: 4
 additional: false
 active: true
+[bootstrap]
+name: Bootstrap
+parsed_name: bootstrap
+default_uri: /bootstrap/getting_started
+scraper_name: bootstrap
+zip_url:  
+sort: 84
+additional: false
+active: true
 [browserify]
 name: Browserify
 parsed_name: browserify
