added Knex docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -49,7 +49,7 @@ parsed_name: bootstrap
 default_uri: /bootstrap/getting_started
 scraper_name: bootstrap
 zip_url:  
-sort: 84
+sort: 5
 additional: false
 active: true
 [browserify]
@@ -58,7 +58,7 @@ parsed_name: browserify
 default_uri: /browserify/getting_started
 scraper_name: browserify
 zip_url:  
-sort: 5
+sort: 6
 additional: false
 active: true
 [c]
@@ -67,7 +67,7 @@ parsed_name: c
 default_uri: /c/c_keywords
 scraper_name: c
 zip_url: http://upload.cppreference.com/mwiki/images/6/6c/html_book_20141118.tar.gz 
-sort: 6
+sort: 7
 additional: false
 active: true
 [chai]
@@ -76,7 +76,7 @@ parsed_name: chai
 default_uri: /chai/api_reference
 scraper_name: chai
 zip_url:  
-sort: 7
+sort: 8
 additional: false
 active: true
 [chef]
@@ -85,7 +85,7 @@ parsed_name: chef
 default_uri: chef/all_about_chef_...
 scraper_name: chef
 zip_url:  
-sort: 80
+sort: 9
 additional: false
 active: true
 [clojure]
@@ -94,7 +94,7 @@ parsed_name: clojure
 default_uri: /clojure/clojure.core
 scraper_name: clojure
 zip_url:  
-sort: 8
+sort: 11
 additional: false
 active: true
 [coffeescript]
@@ -103,7 +103,7 @@ parsed_name: coffeescript
 default_uri: /coffeescript/index
 scraper_name: coffeescript
 zip_url:  
-sort: 9
+sort: 12
 additional: false
 active: true
 [cordova]
@@ -112,7 +112,7 @@ parsed_name: apache_cordova
 default_uri: /apache-cordova/overview
 scraper_name: cordova
 zip_url:  
-sort: 11
+sort: 13
 additional: false
 active: true
 [cpp]
@@ -121,7 +121,7 @@ parsed_name: cpp
 default_uri: /cpp/c++_language
 scraper_name: cpp
 zip_url:  
-sort: 12
+sort: 14
 additional: false
 active: true
 [css]
@@ -139,7 +139,7 @@ parsed_name: d3
 default_uri: /d3/namespaces
 scraper_name: d3
 zip_url:  
-sort: 13
+sort: 15
 additional: false
 active: true
 [django]
@@ -148,7 +148,7 @@ parsed_name: django
 default_uri: /django/getting_started
 scraper_name: django
 zip_url: https://docs.djangoproject.com/m/docs/django-docs-1.8-en.zip 
-sort: 14
+sort: 16
 additional: false
 active: true
 [dom]
@@ -175,7 +175,7 @@ parsed_name: drupal
 default_uri: /drupal
 scraper_name: drupal
 zip_url:  
-sort: 15
+sort: 17
 additional: false
 active: true
 [ember]
@@ -184,7 +184,7 @@ parsed_name: emberjs
 default_uri: /ember/classes/namespace
 scraper_name: ember
 zip_url:  
-sort: 16
+sort: 18
 additional: false
 active: true
 [express]
@@ -193,7 +193,7 @@ parsed_name: express
 default_uri: /express/express
 scraper_name: express
 zip_url:  
-sort: 17
+sort: 19
 additional: false
 active: true
 [git]
@@ -202,7 +202,7 @@ parsed_name: git
 default_uri: /git/git
 scraper_name: git
 zip_url:  
-sort: 18
+sort: 21
 additional: false
 active: true
 [go]
@@ -211,7 +211,7 @@ parsed_name: go
 default_uri: /go/go_programming_language/community
 scraper_name: go
 zip_url:  
-sort: 19
+sort: 22
 additional: false
 active: true
 [grunt]
@@ -220,7 +220,7 @@ parsed_name: grunt
 default_uri: /grunt/grunt
 scraper_name: grunt
 zip_url:  
-sort: 21
+sort: 23
 additional: false
 active: true
 [html]
@@ -238,7 +238,7 @@ parsed_name: http
 default_uri: /http/200_ok
 scraper_name: http
 zip_url:  
-sort: 22
+sort: 24
 additional: false
 active: true
 [haskell]
@@ -247,7 +247,7 @@ parsed_name: haskell
 default_uri: /haskell/index
 scraper_name: haskell
 zip_url:  
-sort: 23
+sort: 25
 additional: false
 active: true
 [iojs]
@@ -256,7 +256,7 @@ parsed_name: iojs
 default_uri: /iojs/index
 scraper_name: iojs
 zip_url:  
-sort: 24
+sort: 26
 additional: false
 active: true
 [jasmine]
@@ -265,7 +265,7 @@ parsed_name: jasmine
 default_uri: /jasmine/introduction
 scraper_name: jasmine
 zip_url:  
-sort: 25
+sort: 27
 additional: false
 active: true
 [javascript]
@@ -283,7 +283,7 @@ parsed_name: java7se
 default_uri: /java7se/
 scraper_name: java7se
 zip_url:  
-sort: 26
+sort: 28
 additional: false
 active: true
 [jest]
@@ -292,7 +292,7 @@ parsed_name: jest
 default_uri: /jest/getting_started
 scraper_name: jest
 zip_url:  
-sort: 27
+sort: 29
 additional: false
 active: true
 [jquery]
@@ -301,7 +301,7 @@ parsed_name: jquery
 default_uri: /jquery/index
 scraper_name: jquery_core
 zip_url:  
-sort: 28
+sort: 31
 additional: false
 active: true
 [jqueryui]
@@ -310,7 +310,7 @@ parsed_name: jquery_ui
 default_uri: /jqueryui/color-animation
 scraper_name: jquery_ui
 zip_url:  
-sort: 29
+sort: 32
 additional: false
 active: true
 [jquerymobile]
@@ -319,7 +319,16 @@ parsed_name: jquery_mobile
 default_uri: /jquerymobile/classes
 scraper_name: jquery_mobile
 zip_url:  
-sort: 31
+sort: 33
+additional: false
+active: true
+[knex]
+name: Knex
+parsed_name: knex
+default_uri: /knex/index
+scraper_name: knex
+zip_url:  
+sort: 34
 additional: false
 active: true
 [knockout]
@@ -328,7 +337,7 @@ parsed_name: knockout
 default_uri: /knockout/knockout.js
 scraper_name: knockout
 zip_url:  
-sort: 32
+sort: 35
 additional: false
 active: true
 [less]
@@ -337,7 +346,7 @@ parsed_name: less
 default_uri: /less/misc_functions
 scraper_name: less
 zip_url:  
-sort: 33
+sort: 36
 additional: false
 active: true
 [laravel]
@@ -346,7 +355,7 @@ parsed_name: laravel
 default_uri: /laravel/namespaces
 scraper_name: laravel
 zip_url:  
-sort: 34
+sort: 37
 additional: false
 active: true
 [lodash]
@@ -355,7 +364,7 @@ parsed_name: lodash
 default_uri: /lodash/_
 scraper_name: lodash
 zip_url:  
-sort: 35
+sort: 38
 additional: false
 active: true
 [lua]
@@ -364,7 +373,7 @@ parsed_name: lua
 default_uri: /lua/manual
 scraper_name: lua
 zip_url:  
-sort: 36
+sort: 39
 additional: false
 active: true
 [marionette]
@@ -373,7 +382,7 @@ parsed_name: marionette
 default_uri: /marionette/api
 scraper_name: marionette
 zip_url:  
-sort: 37
+sort: 41
 additional: false
 active: true
 [markdown]
@@ -382,7 +391,7 @@ parsed_name: markdown
 default_uri: /markdown/inline_html
 scraper_name: markdown
 zip_url:  
-sort: 38
+sort: 42
 additional: false
 active: true
 [mocha]
@@ -391,7 +400,7 @@ parsed_name: mocha
 default_uri: /mocha/index
 scraper_name: mocha
 zip_url:  
-sort: 39
+sort: 43
 additional: false
 active: true
 [modernizr]
@@ -400,7 +409,7 @@ parsed_name: modernizr
 default_uri: /modernizr/index
 scraper_name: modernizr
 zip_url:  
-sort: 41
+sort: 44
 additional: false
 active: true
 [moment]
@@ -409,7 +418,7 @@ parsed_name: moment
 default_uri: /moment/index
 scraper_name: moment
 zip_url:  
-sort: 42
+sort: 45
 additional: false
 active: true
 [mysql]
@@ -418,7 +427,7 @@ parsed_name: mysql
 default_uri: /mysql/index
 scraper_name: mysql
 zip_url:  
-sort: 43
+sort: 46
 additional: false
 active: true
 [mongoosejs]
@@ -427,7 +436,7 @@ parsed_name: mongoosejs
 default_uri: /mongoosejs/index
 scraper_name: mongoose
 zip_url:  
-sort: 44
+sort: 47
 additional: false
 active: true
 [nginx]
@@ -436,7 +445,7 @@ parsed_name: nginx
 default_uri: /nginx/guide/beginner’s_guide
 scraper_name: nginx
 zip_url:  
-sort: 45
+sort: 48
 additional: false
 active: true
 [node]
@@ -445,7 +454,7 @@ parsed_name: node
 default_uri: /nodejs/assert
 scraper_name: node
 zip_url:  
-sort: 46
+sort: 49
 additional: false
 active: true
 [nokogiri]
@@ -454,7 +463,7 @@ name: Nokogiri
 default_uri: /nokogiri/top_level_namespace
 scraper_name: nokogiri2
 zip_url:  
-sort: 47
+sort: 51
 additional: false
 active: true
 [npm]
@@ -463,7 +472,7 @@ parsed_name: npm
 default_uri: /npm/faq
 scraper_name: npm
 zip_url:  
-sort: 48
+sort: 52
 additional: false
 active: true
 [opentsdb]
@@ -472,7 +481,7 @@ parsed_name: opentsdb
 default_uri: /opentsdb/index
 scraper_name: opentsdb
 zip_url:  
-sort: 49
+sort: 53
 additional: false
 active: true
 [php]
@@ -481,7 +490,7 @@ parsed_name: php
 default_uri: /php/classes_and_objects
 scraper_name: php2
 zip_url:  
-sort: 51
+sort: 54
 additional: false
 active: true
 [phpunit]
@@ -490,7 +499,7 @@ parsed_name: phpunit
 default_uri: /phpunit/phpunit_and_selenium
 scraper_name: phpunit
 zip_url:  
-sort: 52
+sort: 55
 additional: false
 active: true
 [phalcon]
@@ -499,7 +508,7 @@ parsed_name: phalcon
 default_uri: /phalcon/
 scraper_name: phalcon
 zip_url:  
-sort: 53
+sort: 56
 additional: false
 active: true
 [phaser]
@@ -508,7 +517,7 @@ parsed_name: phaser
 default_uri: /phaser/
 scraper_name: phaser
 zip_url:  
-sort: 54
+sort: 57
 additional: false
 active: true
 [postgresql]
@@ -517,7 +526,7 @@ parsed_name: postgresql
 default_uri: /postgresql/select
 scraper_name: postgresql
 zip_url:  
-sort: 55
+sort: 58
 additional: false
 active: true
 [python2]
@@ -526,7 +535,7 @@ parsed_name: python2
 default_uri: /python2/keyword
 scraper_name: python2
 zip_url: https://docs.python.org/2.7/archives/python-2.7.8-docs-html.zip
-sort: 56
+sort: 59
 additional: false
 active: true
 [python]
@@ -535,7 +544,7 @@ parsed_name: python3
 default_uri: /python3/abc
 scraper_name: python
 zip_url: https://docs.python.org/3/archives/python-3.5.0-docs-html.zip
-sort: 57
+sort: 60
 additional: false
 active: true
 [q]
@@ -544,7 +553,7 @@ parsed_name: q
 default_uri: /q/index
 scraper_name: q
 zip_url:  
-sort: 58
+sort: 61
 additional: false
 active: true
 [rails]
@@ -553,7 +562,7 @@ parsed_name: rails
 default_uri: /rails/rails
 scraper_name: rails
 zip_url:  
-sort: 59
+sort: 62
 additional: false
 active: true
 [react]
@@ -562,7 +571,7 @@ parsed_name: react
 default_uri: /react/thinking_in_react
 scraper_name: react
 zip_url:  
-sort: 61
+sort: 63
 additional: false
 active: true
 [react_native]
@@ -571,7 +580,7 @@ parsed_name: react_native
 default_uri: /react/
 scraper_name: react_native
 zip_url:  
-sort: 62
+sort: 64
 additional: false
 active: true
 [react_router]
@@ -580,7 +589,7 @@ parsed_name: react_router
 default_uri: /react/
 scraper_name: react_router
 zip_url:  
-sort: 63
+sort: 65
 additional: false
 active: true
 [redis]
@@ -589,7 +598,7 @@ parsed_name: redis
 default_uri: /redis/index
 scraper_name: redis
 zip_url:  
-sort: 64
+sort: 66
 additional: false
 active: true
 [reflux]
@@ -598,7 +607,7 @@ parsed_name: reflux
 default_uri: /reflux/index
 scraper_name: reflux
 zip_url:  
-sort: 65
+sort: 67
 additional: false
 active: true
 [requirejs]
@@ -607,7 +616,7 @@ parsed_name: requirejs
 default_uri: /requirejs/commonjs_notes
 scraper_name: requirejs
 zip_url:  
-sort: 66
+sort: 68
 additional: false
 active: true
 [rethinkdb]
@@ -616,7 +625,7 @@ parsed_name: rethinkdb
 default_uri: /rethinkdb/index_list
 scraper_name: rethinkdb
 zip_url:  
-sort: 67
+sort: 69
 additional: false
 active: true
 [ruby]
@@ -625,7 +634,7 @@ parsed_name: ruby
 default_uri: /ruby/class
 scraper_name: ruby
 zip_url:  
-sort: 68
+sort: 70
 additional: false
 active: true
 [rust]
@@ -634,7 +643,7 @@ parsed_name: rust
 default_uri: rust/2.2._hello._world!
 scraper_name: rust
 zip_url:  
-sort: 69
+sort: 71
 additional: false
 active: true
 [sass]
@@ -643,7 +652,7 @@ parsed_name: sass
 default_uri: /sass/list_functions
 scraper_name: sass
 zip_url:  
-sort: 70
+sort: 72
 additional: false
 active: true
 [scala]
@@ -652,7 +661,7 @@ parsed_name: scala
 default_uri: /scala/index
 scraper_name: scala
 zip_url: 
-sort: 83
+sort: 73
 additional: false
 active: true
 [sinon]
@@ -661,7 +670,7 @@ parsed_name: sinonjs
 default_uri: /sinonjs/spiapi
 scraper_name: sinon
 zip_url:  
-sort: 71
+sort: 74
 additional: false
 active: true
 [socketio]
@@ -670,7 +679,7 @@ parsed_name: socketio
 default_uri: /socketio/client_api
 scraper_name: socketio
 zip_url:  
-sort: 72
+sort: 75
 additional: false
 active: true
 [svg]
@@ -688,7 +697,7 @@ parsed_name: swift
 default_uri: /swift/index
 scraper_name: swift
 zip_url:  
-sort: 81
+sort: 76
 additional: false
 active: true
 [swiftreference]
@@ -697,7 +706,7 @@ parsed_name: swift
 default_uri: /swift/reference/index
 scraper_name: swiftreference
 zip_url:  
-sort: 82
+sort: 77
 additional: true
 active: true
 [symfony]
@@ -706,7 +715,7 @@ parsed_name: symfony
 default_uri: /symfony/component/console/command/listcommand
 scraper_name: symfony
 zip_url:  
-sort: 73
+sort: 78
 additional: false
 active: true
 [twig]
@@ -715,7 +724,7 @@ parsed_name: twig
 default_uri: /twig/doc-index
 scraper_name: twig
 zip_url:  
-sort: 74
+sort: 79
 additional: false
 active: true
 [underscore]
@@ -724,7 +733,7 @@ parsed_name: underscorejs
 default_uri: /underscorejs/all
 scraper_name: underscore
 zip_url:  
-sort: 75
+sort: 80
 additional: false
 active: true
 [vue]
@@ -733,7 +742,7 @@ parsed_name: vue
 default_uri: /vue/getting_started
 scraper_name: vue
 zip_url:  
-sort: 76
+sort: 81
 additional: false
 active: true
 [webpack]
@@ -742,7 +751,7 @@ parsed_name: webpack
 default_uri: /webpack/installation
 scraper_name: webpack
 zip_url:  
-sort: 77
+sort: 82
 additional: false
 active: true
 [xpath]
@@ -760,7 +769,7 @@ parsed_name: yii
 default_uri: /yii/quick_start
 scraper_name: yii
 zip_url:  
-sort: 78
+sort: 83
 additional: false
 active: true
 [yii1]
@@ -769,6 +778,6 @@ parsed_name: Yii1
 default_uri: /yii1
 scraper_name: yii1
 zip_url:  
-sort: 79
+sort: 84
 additional: false
 active: true
