added perl docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -484,13 +484,22 @@ zip_url:
 sort: 53
 additional: false
 active: true
+[perl]
+name: Perl
+parsed_name: perl
+default_uri: /perl/index
+scraper_name: perl
+zip_url:  http://perldoc.perl.org/perldoc-html.tar.gz
+sort: 54
+additional: false
+active: true
 [php]
 name: PHP
 parsed_name: php
 default_uri: /php/classes_and_objects
 scraper_name: php2
 zip_url:  
-sort: 54
+sort: 55
 additional: false
 active: true
 [phpunit]
@@ -499,7 +508,7 @@ parsed_name: phpunit
 default_uri: /phpunit/phpunit_and_selenium
 scraper_name: phpunit
 zip_url:  
-sort: 55
+sort: 56
 additional: false
 active: true
 [phalcon]
@@ -508,7 +517,7 @@ parsed_name: phalcon
 default_uri: /phalcon/
 scraper_name: phalcon
 zip_url:  
-sort: 56
+sort: 57
 additional: false
 active: true
 [phaser]
@@ -517,7 +526,7 @@ parsed_name: phaser
 default_uri: /phaser/
 scraper_name: phaser
 zip_url:  
-sort: 57
+sort: 58
 additional: false
 active: true
 [postgresql]
@@ -526,7 +535,7 @@ parsed_name: postgresql
 default_uri: /postgresql/select
 scraper_name: postgresql
 zip_url:  
-sort: 58
+sort: 59
 additional: false
 active: true
 [python2]
@@ -535,7 +544,7 @@ parsed_name: python2
 default_uri: /python2/keyword
 scraper_name: python2
 zip_url: https://docs.python.org/2.7/archives/python-2.7.8-docs-html.zip
-sort: 59
+sort: 60
 additional: false
 active: true
 [python]
@@ -544,7 +553,7 @@ parsed_name: python3
 default_uri: /python3/abc
 scraper_name: python
 zip_url: https://docs.python.org/3/archives/python-3.5.0-docs-html.zip
-sort: 60
+sort: 61
 additional: false
 active: true
 [q]
@@ -553,7 +562,7 @@ parsed_name: q
 default_uri: /q/index
 scraper_name: q
 zip_url:  
-sort: 61
+sort: 62
 additional: false
 active: true
 [rails]
@@ -562,7 +571,7 @@ parsed_name: rails
 default_uri: /rails/rails
 scraper_name: rails
 zip_url:  
-sort: 62
+sort: 63
 additional: false
 active: true
 [react]
@@ -571,7 +580,7 @@ parsed_name: react
 default_uri: /react/thinking_in_react
 scraper_name: react
 zip_url:  
-sort: 63
+sort: 64
 additional: false
 active: true
 [react_native]
@@ -580,7 +589,7 @@ parsed_name: react_native
 default_uri: /react/
 scraper_name: react_native
 zip_url:  
-sort: 64
+sort: 65
 additional: false
 active: true
 [react_router]
@@ -589,7 +598,7 @@ parsed_name: react_router
 default_uri: /react/
 scraper_name: react_router
 zip_url:  
-sort: 65
+sort: 66
 additional: false
 active: true
 [redis]
@@ -598,7 +607,7 @@ parsed_name: redis
 default_uri: /redis/index
 scraper_name: redis
 zip_url:  
-sort: 66
+sort: 67
 additional: false
 active: true
 [reflux]
@@ -607,7 +616,7 @@ parsed_name: reflux
 default_uri: /reflux/index
 scraper_name: reflux
 zip_url:  
-sort: 67
+sort: 68
 additional: false
 active: true
 [requirejs]
@@ -616,7 +625,7 @@ parsed_name: requirejs
 default_uri: /requirejs/commonjs_notes
 scraper_name: requirejs
 zip_url:  
-sort: 68
+sort: 69
 additional: false
 active: true
 [rethinkdb]
@@ -625,7 +634,7 @@ parsed_name: rethinkdb
 default_uri: /rethinkdb/index_list
 scraper_name: rethinkdb
 zip_url:  
-sort: 69
+sort: 70
 additional: false
 active: true
 [ruby]
@@ -634,7 +643,7 @@ parsed_name: ruby
 default_uri: /ruby/class
 scraper_name: ruby
 zip_url:  
-sort: 70
+sort: 71
 additional: false
 active: true
 [rust]
@@ -643,7 +652,7 @@ parsed_name: rust
 default_uri: rust/2.2._hello._world!
 scraper_name: rust
 zip_url:  
-sort: 71
+sort: 72
 additional: false
 active: true
 [sass]
@@ -652,7 +661,7 @@ parsed_name: sass
 default_uri: /sass/list_functions
 scraper_name: sass
 zip_url:  
-sort: 72
+sort: 73
 additional: false
 active: true
 [scala]
@@ -661,7 +670,7 @@ parsed_name: scala
 default_uri: /scala/index
 scraper_name: scala
 zip_url: 
-sort: 73
+sort: 74
 additional: false
 active: true
 [sinon]
@@ -670,7 +679,7 @@ parsed_name: sinonjs
 default_uri: /sinonjs/spiapi
 scraper_name: sinon
 zip_url:  
-sort: 74
+sort: 75
 additional: false
 active: true
 [socketio]
@@ -679,7 +688,7 @@ parsed_name: socketio
 default_uri: /socketio/client_api
 scraper_name: socketio
 zip_url:  
-sort: 75
+sort: 76
 additional: false
 active: true
 [svg]
@@ -697,7 +706,7 @@ parsed_name: swift
 default_uri: /swift/index
 scraper_name: swift
 zip_url:  
-sort: 76
+sort: 77
 additional: false
 active: true
 [swiftreference]
@@ -706,7 +715,7 @@ parsed_name: swift
 default_uri: /swift/reference/index
 scraper_name: swiftreference
 zip_url:  
-sort: 77
+sort: 78
 additional: true
 active: true
 [symfony]
@@ -715,7 +724,7 @@ parsed_name: symfony
 default_uri: /symfony/component/console/command/listcommand
 scraper_name: symfony
 zip_url:  
-sort: 78
+sort: 79
 additional: false
 active: true
 [twig]
@@ -724,7 +733,7 @@ parsed_name: twig
 default_uri: /twig/doc-index
 scraper_name: twig
 zip_url:  
-sort: 79
+sort: 80
 additional: false
 active: true
 [underscore]
@@ -733,7 +742,7 @@ parsed_name: underscorejs
 default_uri: /underscorejs/all
 scraper_name: underscore
 zip_url:  
-sort: 80
+sort: 81
 additional: false
 active: true
 [vue]
@@ -742,7 +751,7 @@ parsed_name: vue
 default_uri: /vue/getting_started
 scraper_name: vue
 zip_url:  
-sort: 81
+sort: 82
 additional: false
 active: true
 [webpack]
@@ -751,7 +760,7 @@ parsed_name: webpack
 default_uri: /webpack/installation
 scraper_name: webpack
 zip_url:  
-sort: 82
+sort: 83
 additional: false
 active: true
 [xpath]
@@ -760,7 +769,7 @@ parsed_name: xpath
 default_uri: /xpath/index
 scraper_name: xpath
 zip_url:  
-sort: 60
+sort: 84
 additional: false
 active: true
 [yii]
@@ -769,7 +778,7 @@ parsed_name: yii
 default_uri: /yii/quick_start
 scraper_name: yii
 zip_url:  
-sort: 83
+sort: 85
 additional: false
 active: true
 [yii1]
@@ -778,6 +787,6 @@ parsed_name: Yii1
 default_uri: /yii1
 scraper_name: yii1
 zip_url:  
-sort: 84
+sort: 86
 additional: false
 active: true
