--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -691,6 +691,15 @@ zip_url:
 sort: 76
 additional: false
 active: true
+[sqlite]
+name: SQLite
+parsed_name: sqlite
+default_uri: /sqlite/index
+scraper_name: sqlite
+zip_url: https://www.sqlite.org/2015/sqlite-doc-3090100.zip
+sort: 87
+additional: false
+active: true
 [svg]
 name: SVG
 parsed_name: svg
